# rpi5-k8s-node-bootstrapper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.ini.sample  docker-compose.yml  pyproject.toml  renovate.json  resize_and_format.sh  run.sh
.github/workflows/: build-and-push.yml
node_bootstrapper/: config_generator.py  disk_manager.py  partition_manager.py  utils.py
node_bootstrapper/templates/: cmdline.txt  config.txt
node_bootstrapper/templates/cloud-init/: network-config.j2  user-data.j2
