[tool.poetry]
name = "rpi5-k8s-node-bootstrapper"
version = "0.1.0"
description = "A set of utilities to bootstrap Raspberry Pi 5s as k8s nodes"
authors = ["Sergios <sergios@7timescode.com>"]
readme = "README.md"
packages = [
    {include = "node_bootstrapper"}
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"
jinja2 = "^3.1.4"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
ipdb = "^0.13.13"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
